--- a/Code Project/DuLichDoDay/app/src/main/res/values/colors.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/values/colors.xml
@@ -3,14 +3,14 @@
     <color name="colorPrimary">#6dcca3</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#fdfafb</color>
-    <color name="colorAccent1">#ad1b5d</color>
 
     <color name="color_main">#64be97</color>
     <color name="btn_login">#435154</color>
     <color name="color_user">#f41b3f</color>
-    <color name="vang">#fffb7d</color>
     <color name="txt">#e9e8e8</color>
 
+
+    <color name="cvang">#fcf0a4</color>
 
 
     <color name="bg_main_x">#d1d1d1</color>
