--- a/Code Project/DuLichDoDay/app/src/main/res/layout/dialog_edit_layout.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/dialog_edit_layout.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.group6.dulichdoday.AddPlaceActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -37,14 +34,14 @@
                     android:layout_toRightOf="@id/imgLogo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Thêm bài đăng"
+                    android:text="Chinh sửa bài đăng"
                     android:layout_marginLeft="10dp"
                     android:textStyle="bold"
                     android:textColor="@android:color/white"
                     android:textSize="20sp"/>
 
                 <TextView
-                    android:id="@+id/cancel_add"
+                    android:id="@+id/cancel_edit"
                     android:layout_alignParentRight="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -150,11 +147,10 @@
                 style="@style/Edittext"
                 android:drawableLeft="@drawable/price_add"
                 android:drawablePadding="20dp"
-                android:hint="Giá tiền"
-                android:singleLine="true"/>
+                android:hint="Giá tiền"/>
 
             <TextView
-                android:id="@+id/btnAdd"
+                android:id="@+id/btnUpdate"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -163,13 +159,13 @@
                 android:padding="10dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="15dp"
                 android:textColor="@android:color/white"
                 android:background="@drawable/custom_btn_login"
-                android:text="Thêm"/>
+                android:text="Cập nhật"/>
 
         </LinearLayout>
 
 
     </LinearLayout>
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
