--- a/Code Project/DuLichDoDay/app/src/main/res/layout/custom_tour.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/custom_tour.xml
@@ -49,7 +49,7 @@
                     android:text="Mã tour : 1"/>
 
                 <TextView
-                    android:id="@+id/tv_add_tour"
+                    android:id="@+id/tv_name_tour"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@android:color/black"
@@ -57,7 +57,7 @@
                     android:text="TPHCM - Vĩnh Long"/>
 
                 <TextView
-                    android:id="@+id/tv_discip_tour"
+                    android:id="@+id/tv_time_tour"
                     android:layout_marginTop="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
