--- a/Code Project/DuLichDoDay/app/src/main/res/layout/manager_tour_layout.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/manager_tour_layout.xml
@@ -18,7 +18,7 @@
             android:orientation="horizontal"
             android:gravity="center">
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -26,10 +26,14 @@
                 android:gravity="center|left">
 
                 <ImageView
+                    android:id="@+id/imgLogo"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:src="@drawable/travel" />
                 <TextView
+                    android:layout_toRightOf="@id/imgLogo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Chỉnh sửa bài đăng"
@@ -39,16 +43,18 @@
                     android:textSize="20dp"/>
 
                 <TextView
-                    android:id="@+id/cancel_update"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentTop="true"
+                    android:id="@+id/cancel_manager_tour"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="17sp"
+                    android:textSize="20sp"
                     android:textColor="@android:color/white"
                     android:textStyle="bold"
-                    android:layout_marginLeft="100dp"
+                    android:layout_marginRight="15dp"
                     android:text="Trở lại"/>
 
-            </LinearLayout>
+            </RelativeLayout>
 
         </LinearLayout>
 
