--- a/Code Project/DuLichDoDay/app/src/main/res/layout/update_infor_layout.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/update_infor_layout.xml
@@ -28,7 +28,7 @@
                    android:orientation="horizontal"
                    android:gravity="center">
 
-                   <LinearLayout
+                   <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
@@ -36,10 +36,14 @@
                        android:gravity="center|left">
 
                        <ImageView
+                           android:id="@+id/imgLogo"
+                           android:layout_alignParentTop="true"
+                           android:layout_alignParentLeft="true"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:src="@drawable/travel" />
                        <TextView
+                           android:layout_toRightOf="@id/imgLogo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Cập nhật thông tin"
@@ -50,15 +54,16 @@
 
                        <TextView
                            android:id="@+id/cancel_update"
+                           android:layout_alignParentRight="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="17sp"
                            android:textColor="@android:color/white"
                            android:textStyle="bold"
-                           android:layout_marginLeft="100dp"
+                           android:layout_marginRight="15dp"
                            android:text="Hủy bỏ"/>
 
-                   </LinearLayout>
+                   </RelativeLayout>
 
                </LinearLayout>
 
@@ -82,6 +87,7 @@
                        style="@style/Edittext"
                        android:drawableLeft="@drawable/detail_user"
                        android:drawablePadding="20dp"
+                       android:singleLine="true"
                        android:hint="Họ và tên"/>
 
                    <EditText
@@ -89,6 +95,7 @@
                        style="@style/Edittext"
                        android:drawableLeft="@drawable/ic_birthday"
                        android:drawablePadding="20dp"
+                       android:singleLine="true"
                        android:hint="Ngày sinh"/>
 
                    <EditText
@@ -96,6 +103,7 @@
                        style="@style/Edittext"
                        android:drawableLeft="@drawable/ic_sex"
                        android:drawablePadding="20dp"
+                       android:singleLine="true"
                        android:hint="Giới tính"/>
 
                    <EditText
@@ -104,6 +112,7 @@
                        android:inputType="number"
                        android:drawableLeft="@drawable/ic_phone"
                        android:drawablePadding="20dp"
+                       android:singleLine="true"
                        android:hint="Số điện thoại"/>
 
                    <EditText
@@ -111,6 +120,7 @@
                        style="@style/Edittext"
                        android:drawableLeft="@drawable/detail_address"
                        android:drawablePadding="20dp"
+                       android:singleLine="true"
                        android:hint="Địa chỉ"/>
 
                    <TextView
