--- a/Code Project/DuLichDoDay/app/src/main/res/layout/business_layout.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/business_layout.xml
@@ -22,7 +22,7 @@
                 android:gravity="center"
                 android:orientation="horizontal">
 
-                <LinearLayout
+                <RelativeLayout
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="10dp"
@@ -30,11 +30,15 @@
                     android:gravity="center|left">
 
                     <ImageView
+                        android:id="@+id/imgLogo"
+                        android:layout_alignParentTop="true"
+                        android:layout_alignParentLeft="true"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:src="@drawable/travel" />
 
                     <TextView
+                        android:layout_toRightOf="@id/imgLogo"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
@@ -44,15 +48,17 @@
                         android:textStyle="bold" />
 
                     <TextView
+                        android:id="@+id/tvBack"
+                        android:layout_alignParentRight="true"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="100dp"
+                        android:layout_marginRight="15dp"
                         android:text="Trở về"
                         android:textColor="@android:color/white"
                         android:textSize="17sp"
                         android:textStyle="bold" />
 
-                </LinearLayout>
+                </RelativeLayout>
 
             </LinearLayout>
 
