--- a/Code Project/DuLichDoDay/app/src/main/res/layout/detail_tour_layout.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/detail_tour_layout.xml
@@ -44,7 +44,7 @@
                     android:textSize="20sp"/>
 
                 <TextView
-                    android:id="@+id/cancel_update"
+                    android:id="@+id/tv_Back_Detail"
                     android:layout_alignParentRight="true"
                     android:layout_marginRight="15dp"
                     android:layout_width="wrap_content"
