Mod load tour of user

--- a/Code Project/DuLichDoDay/app/src/main/res/layout/detail_tour_layout.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/detail_tour_layout.xml
@@ -19,7 +19,7 @@
             android:orientation="horizontal"
             android:gravity="center">
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -27,13 +27,17 @@
                 android:gravity="center|left">
 
                 <ImageView
+                    android:id="@+id/imgLogo"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentLeft="true"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:src="@drawable/travel" />
                 <TextView
+                    android:layout_toRightOf="@id/imgLogo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="chi tiết tour "
+                    android:text="Chi tiết tour "
                     android:layout_marginLeft="10dp"
                     android:textStyle="bold"
                     android:textColor="@android:color/white"
@@ -41,15 +45,16 @@
 
                 <TextView
                     android:id="@+id/cancel_update"
+                    android:layout_alignParentRight="true"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="17sp"
                     android:textColor="@android:color/white"
                     android:textStyle="bold"
-                    android:layout_marginLeft="110dp"
+                    android:layout_marginRight="15dp"
                     android:text="Trở về"/>
 
-            </LinearLayout>
+            </RelativeLayout>
 
         </LinearLayout>
 
@@ -108,7 +113,7 @@
                                 android:text="01"/>
 
                             <TextView
-                                android:id="@+id/tvAddDetail"
+                                android:id="@+id/tvNameDetail"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:textColor="@android:color/white"
@@ -116,7 +121,7 @@
                                 android:text="sdasdas"/>
 
                             <TextView
-                                android:id="@+id/tvDesciption"
+                                android:id="@+id/tvTimeDetail"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:textColor="@android:color/white"
@@ -152,7 +157,7 @@
                             android:textStyle="bold" />
 
                         <TextView
-                            android:id="@+id/tvNoiDungTour"
+                            android:id="@+id/tvDescriptionTour"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
