--- a/Code Project/DuLichDoDay/app/src/main/res/layout/update_infor_layout.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/update_infor_layout.xml
@@ -80,7 +80,7 @@
                        android:id="@+id/img_choosen"
                        android:layout_width="180dp"
                        android:layout_height="180dp"
-                       android:src="@drawable/image"/>
+                       android:src="@drawable/man"/>
 
                    <EditText
                        android:id="@+id/edtName"
