--- a/Code Project/DuLichDoDay/app/src/main/res/layout/custom_tour_list.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/custom_tour_list.xml
@@ -11,41 +11,35 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="horizontal">
 
             <LinearLayout
-                android:id="@+id/linearImg"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center">
 
                 <ImageView
-                    android:id="@+id/img_tour_list"
-                    android:layout_width="120dp"
-                    android:layout_height="120dp"/>
+                    android:id="@+id/img_tour_book"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:src="@drawable/travel"/>
 
             </LinearLayout>
 
             <LinearLayout
-                android:layout_alignParentTop="true"
-                android:layout_toRightOf="@id/linearImg"
-
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="2"
+                android:layout_weight="1.5"
                 android:paddingLeft="10dp"
                 android:paddingTop="5dp"
                 android:orientation="vertical">
 
                 <TextView
-
-                    android:id="@+id/tv_code_tour_list"
+                    android:id="@+id/tv_code_tour_book"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textStyle="bold"
@@ -54,7 +48,7 @@
                     android:text="Mã tour : 1"/>
 
                 <TextView
-                    android:id="@+id/tv_name_tour_list"
+                    android:id="@+id/tv_add_tour_book"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@android:color/black"
@@ -62,14 +56,14 @@
                     android:text="TPHCM - Vĩnh Long"/>
 
                 <TextView
-                    android:id="@+id/tv_time_tour_list"
+                    android:id="@+id/tv_discip_tour_book"
                     android:layout_marginTop="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="3 Ngày 2 Đêm"/>
 
                 <TextView
-                    android:id="@+id/tv_price_tour_list"
+                    android:id="@+id/tv_price_tour_book"
                     android:drawableLeft="@drawable/money"
                     android:drawablePadding="10dp"
                     android:layout_width="wrap_content"
@@ -79,22 +73,8 @@
                     android:text="560.000 đ"/>
 
             </LinearLayout>
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
 
-                <TextView
-                    android:id="@+id/textViewOptions"
-                    android:layout_width="20dp"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_marginRight="12dp"
-                    android:paddingLeft="@dimen/activity_horizontal_margin"
-                    android:text="&#8942;"
-                    android:textAppearance="?android:textAppearanceLarge" />
-            </RelativeLayout>
-        </RelativeLayout>
+        </LinearLayout>
 
     </android.support.v7.widget.CardView>
 
