--- a/Code Project/DuLichDoDay/app/src/main/res/layout/dialog_accept.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/dialog_accept.xml
@@ -46,6 +46,7 @@
             style="@style/linear">
 
             <TextView
+                android:id="@+id/btnCancel"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/white"
