--- a/Code Project/DuLichDoDay/app/src/main/res/layout/dialog_change_passwork.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/dialog_change_passwork.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:background="@color/colorPrimary"
+        android:textColor="@color/colorAccent"
         android:text="Bạn có muốn duy trì đăng nhập không"/>
 
     <LinearLayout
@@ -21,19 +22,23 @@
         android:backgroundTint="@color/colorPrimary">
 
         <Button
+            android:layout_margin="2dp"
             android:id="@+id/dialog_yes"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:background="@color/cardview_dark_background"
+            android:background="@color/colorPrimary"
             android:layout_weight="0.50"
+            android:textColor="@color/colorAccent"
             android:text="Yes"/>
 
         <Button
             android:id="@+id/dialog_huy"
             android:layout_width="0dp"
-            android:background="@color/cardview_dark_background"
+            android:background="@color/colorPrimary"
             android:layout_height="match_parent"
             android:layout_weight="0.50"
+            android:layout_margin="2dp"
+            android:textColor="@color/colorAccent"
             android:text="No"/>
     </LinearLayout>
 
