--- a/Code Project/DuLichDoDay/app/src/main/res/layout/password_layout.xml
+++ b/Code Project/DuLichDoDay/app/src/main/res/layout/password_layout.xml
@@ -9,13 +9,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@drawable/background">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:background="@color/color_main"
             android:orientation="horizontal"
             android:gravity="center">
 
@@ -47,7 +47,6 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="11"
-            android:background="@color/color_main"
             android:layout_marginTop="2dp"
             android:orientation="vertical"
             android:gravity="center">
